--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
 			<div class="container pr-0">
 				<!-- Begin Logo -->
 				<a class="navbar-brand" href="/">
-					<img src="/assets/Logo.png" alt="AutocrossRank.com" />
+					<img src="/assets/images/Logo-200.png" alt="AutocrossRank.com" />
 				</a>
 				<!-- End Logo -->
 
