--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@ title: Home
 
 {% if page.url == "/" %}
 
+<!-- Site Title only on homepage
+================================================== -->
+
+<div class="mainheading">
+    <h1 class="sitetitle">Welcome to {{ site.name }}</h1>
+    <p class="lead">
+        {{ site.description }}
+    </p>
+</div>
+
 <!-- Featured
 ================================================== -->
 <section class="featured-posts">
