deploy: 74f78d7e9095e1349330c1da2117449dbf21a28f

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 		<!-- Google tag (gtag.js) -->
 		<script
 			async
-			src="https://www.googletagmanager.com/gtag/js?id=G-ZKHV3G3SN8"
+			src="https://www.googletagmanager.com/gtag/js?id=G-9NJ4X7KQC9"
 		></script>
 		<script>
 			window.dataLayer = window.dataLayer || [];
@@ -13,7 +13,7 @@
 			}
 			gtag("js", new Date());
 
-			gtag("config", "G-ZKHV3G3SN8");
+			gtag("config", "G-9NJ4X7KQC9");
 		</script>
 
 		<meta charset="utf-8" />
@@ -24,8 +24,8 @@
 		<title>About AutocrossRank.com - AutocrossRank.com - Coming Soon!</title>
 		<link rel="icon" href="/assets/favicon.ico" />
 
-		<meta property="og:url" content="https://www.AutocrossRank.com/about" />
-		<meta property="og:image" content="https://www.AutocrossRank.com" />
+		<meta property="og:url" content="https://www.autocrossrank.com/about" />
+		<meta property="og:image" content="https://www.autocrossrank.com" />
 
 		<meta property="og:type" content="article" />
 
@@ -37,8 +37,18 @@
 		<meta property="og:description" content="Coming Soon!" />
 		<meta name="description" content="Coming Soon!" />
 
+		<!-- Twitter Card data -->
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:site" content="@" />
+		<meta
+			name="twitter:title"
+			content="About AutocrossRank.com - AutocrossRank.com - Coming Soon! "
+		/>
+		<meta name="twitter:description" content="Coming Soon!" />
+		<meta name="twitter:image" content="https://www.autocrossrank.com" />
+
 		<meta name="keywords" content="" />
-		<link rel="canonical" href="https://www.AutocrossRank.com/about" />
+		<link rel="canonical" href="https://www.autocrossrank.com/about" />
 
 		<link
 			rel="stylesheet"
@@ -171,7 +181,7 @@
 
 				<!-- Content
 ================================================== -->
-				<div class="main-content">
+				<main class="main-content">
 					<div class="container">
 						<div class="row">
 							<div class="col-md-2 flex-first flex-md-unordered"></div>
@@ -190,7 +200,7 @@
 							<div class="col-md-2 flex-first flex-md-unordered"></div>
 						</div>
 					</div>
-				</div>
+				</main>
 			</div>
 
 			<!-- Categories Jumbotron
